--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-session": "^1.18.1",
     "bcryptjs": "^3.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
